--- a/selectstars/src/components/CreateUserForm/createUserForm.css
+++ b/selectstars/src/components/CreateUserForm/createUserForm.css
@@ -6,25 +6,30 @@
 }
 
 body {
-    background-color: #fff;
+    background-color: #8246AE;
 }
 
 form {
     margin: 20px auto;
-    max-width: 400px;
+    max-width: 700px;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    background-color: white;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 h1 {
-    color: #8246ae;
+    color: white;
     text-align: center;
     margin-bottom: 20px;
 }
 
 .signUpField {
-    margin-bottom: 20px;
+    margin: 10px;
+    width: 46%;
+    text-align: center;
 }
 
 label {
@@ -64,5 +69,9 @@ button[type="submit"]:hover {
 @media screen and (max-width: 480px) {
     form {
         max-width: 100%;
+    }
+
+    .signUpField {
+        width: 100%;
     }
 }
