--- a/selectstars/src/components/CreateEventForm/createEventForm.css
+++ b/selectstars/src/components/CreateEventForm/createEventForm.css
@@ -9,12 +9,16 @@ body {
     background-color: #8246AE;
 }
 
+.event-page h1 {
+    color: #8246AE;
+}
+
 form {
     margin: 20px auto;
     max-width: 700px;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 15px rgb(0 0 0 / 20%);
     background-color: white;
     display: flex;
     flex-wrap: wrap;
