--- a/selectstars/src/components/CreateUserForm/createUserForm.css
+++ b/selectstars/src/components/CreateUserForm/createUserForm.css
@@ -9,15 +9,19 @@ body {
     background-color: #8246AE;
 }
 
-form {
-    margin: 20px auto;
-    max-width: 700px;
+.register-page h1 {
+    color: #8246AE;
+}
+
+.register-form {
+    max-width: 800px;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 15px rgb(0 0 0 / 20%);
     background-color: white;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 h1 {
