--- a/selectstars/src/components/LoginPage/loginform.css
+++ b/selectstars/src/components/LoginPage/loginform.css
@@ -27,6 +27,7 @@ h1 {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    margin: 0 auto;
 }
 
 input {
@@ -56,19 +57,24 @@ input:focus {
 }
 
 .login-button:hover {
-    transform: scale(1.25);
+    transform: scale(1.1);
 }
 
 .createAccount-button {
     width: 40%;
     height: 3em;
-    background-color: whitesmoke;
+    background-color: #F9A426;
+    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     transition: 0.5s;
     border-radius: 0.25em;
     cursor: pointer;
+}
+
+.createAccount-button:hover {
+    transform: scale(1.1);
 }
 
 .hide {
