--- a/selectstars/src/components/MentorProfilePage/mentorProfile.css
+++ b/selectstars/src/components/MentorProfilePage/mentorProfile.css
@@ -1,9 +1,9 @@
-* {
+/* * {
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+    margin: 5px;
+    padding: 5px;
     font-family: Arial, sans-serif;
-}
+} */
 
 body {
     background-color: #fff;
@@ -11,16 +11,23 @@ body {
 
 
 h1 {
-    color: white;
+    color: rgb(13, 11, 11);
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
+    margin-top: 10px;
 }
 
-.mentorProfilePage{
+ .mentorProfilePage{
     display: flex;
-    margin-bottom: 5px;
-    font-weight: bold;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around; 
+    border: black;
 }
+
+.mentorProfilePage img{
+    width: 200px;
+} 
 
 button[type="submit"] {
     display: block;
