--- a/selectstars/src/components/MentorCard/mentorCard.css
+++ b/selectstars/src/components/MentorCard/mentorCard.css
@@ -1,7 +1,10 @@
 .mentorProfile_card{
-    background-color: #f3279a;
-    padding: 5px;
-    max-width: 350px;
+    max-width: 320px;
+    background-color: #fff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    padding: 20px;
+    color: #8246ae;
 }
 
 .mentorProfile_card img {
@@ -20,4 +23,5 @@
 
 .mentorProfile_card h3 {  
     font-size: 15px;
+    text-decoration: #8246ae;
 }
