--- a/selectstars/src/components/LoginPage/loginform.css
+++ b/selectstars/src/components/LoginPage/loginform.css
@@ -4,7 +4,7 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
 
-h1 {
+.cover h1 {
     color: white;
 }
 
@@ -30,7 +30,7 @@ h1 {
     margin: 0 auto;
 }
 
-input {
+.cover input {
     border: none;
     background-color: white;
     height: 4em;
@@ -92,7 +92,7 @@ input:focus {
     align-items: center;
     justify-content: center;
     border-radius: 0.25em;
-    background-color: black;
+    background-color: orange;
     color: white;
     bottom: 0;
     transform: scale(1);
