--- a/selectstars/src/components/OnboardingPage/onboardingPage.css
+++ b/selectstars/src/components/OnboardingPage/onboardingPage.css
@@ -1,54 +1,93 @@
-/* *{
-  border: 1px solid black;
-  padding: 5px;
-} */
+.onboarding-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 20px;
+}
 
-/* form {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 30px;
+}
 
-  }
-  
-  .checkbox-label {
-    margin-bottom: 30px;
-    display: flex;
-    align-items: center;
-   
-  }
-  
-  input[type="checkbox"] {
-    width: 30px;
-    height: 30px;
-    margin-right: 12px;
-    
-  } */
+.checkbox-label {
+  margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
 
-  .onboarding-container {
-    display: flex;
-    flex-direction: row;
-  }
-  
-  form {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-  }
-  
-  .checkbox-label {
-    margin-bottom: 30px;
-    display: flex;
-    align-items: center;
-  }
-  
-  input[type="checkbox"] {
-    width: 30px;
-    height: 30px;
-    margin-right: 12px;
-  }
-  
-  .mentorProfile_card {
-    margin-left: 20px;
-  }
+input[type="checkbox"] {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  appearance: none;
+  background-color: #fff;
+  border-radius: 50%;
+  border: 2px solid #ccc;
+  outline: none;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+input[type="checkbox"]:hover {
+  border-color: #aaa;
+}
+
+input[type="checkbox"]:checked {
+  background-color: #8a2be2;
+  border-color: #8a2be2;
+}
+
+.checkbox-label:before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: -1px;
+  left: -3px;
+  width: 30px;
+  height: 30px;
+  /* border: 2px solid #ccc;
+  border-radius: 50%; */
+  text-align: center;
+  line-height: 40px;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.checkbox-label:nth-of-type(1):before {
+  content: '1';
+}
+
+.checkbox-label:nth-of-type(2):before {
+  content: '2';
+}
+
+.checkbox-label:nth-of-type(3):before {
+  content: '3';
+}
+
+.checkbox-label:nth-of-type(4):before {
+  content: '4';
+}
+
+.checkbox-label:nth-of-type(5):before {
+  content: '5';
+}
+
+.checkbox-label:nth-of-type(6):before {
+  content: '6';
+}
+
+.mentors-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.mentorProfile_card {
+  margin: 10px;
+}
