--- a/selectstars/src/App.css
+++ b/selectstars/src/App.css
@@ -5,6 +5,11 @@
 /* text-align: center;
 } */
 
+html, body, #root {
+  width: 100%;
+  height: 100%;
+}
+
 */ .logo {
   height: 6em;
   padding: 1.5em;
@@ -38,8 +43,8 @@
 
 .card {
   padding: 2em;
-}
+};
 
 .read-the-docs {
   color: #888;
-}
+};
