--- a/selectstars/src/components/MentorProfilePage/mentorProfile.css
+++ b/selectstars/src/components/MentorProfilePage/mentorProfile.css
@@ -1,14 +1,14 @@
-* {
+/* * {
     box-sizing: border-box;
     margin: 5px;
     padding: 5px;
     font-family: Arial, sans-serif;
-}
+} */
 
-body {
+/* body {
     background-color: #fff;
     color: #8246ae;
-}
+} */
 
 
  .mentorProfilePage{
