--- a/selectstars/src/components/HomePage/HomePage.css
+++ b/selectstars/src/components/HomePage/HomePage.css
@@ -1,9 +1,27 @@
 .home-page {
-    margin: 20px;
     color: #8246ae;
+    height: 100%;
+}
+
+.home-page .background-image {
+    position: absolute; 
+    width: 100%;
+    height: 100%;
+    z-index: -1;
     background-image: url("https://s35764.pcdn.co/wp-content/uploads/2022/06/Women-in-Coding_1200x62801.jpg");
-    object-fit: fill;
-    opacity: calc(30%);
+    background-size: cover;
+    background-position: center;
+}
+.home-page .background-image::after {
+    position: absolute; 
+    content: " ";
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-color: #8246AF;
+    background-size: cover;
+    background-position: center;
+    opacity: calc(25%);
 }
 
 
@@ -20,9 +38,10 @@
 }
 
 .event-card {
-    background-color: #fff;
+    background: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
+    margin: 20px;
     padding: 20px;
     width: 300px;
 }
