--- a/selectstars/src/components/MentorProfilePage/mentorProfile.css
+++ b/selectstars/src/components/MentorProfilePage/mentorProfile.css
@@ -45,3 +45,26 @@ button[type="submit"]:hover {
         max-width: 100%;
     }
 }
+
+.mentorProfilePage {
+    position: absolute; 
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-image: url("https://s35764.pcdn.co/wp-content/uploads/2022/06/Women-in-Coding_1200x62801.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+.mentorProfilePage::after {
+    position: absolute; 
+    content: " ";
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-color: #8246AF;
+    background-size: cover;
+    background-position: center;
+    opacity: calc(25%);
+}
+
