--- a/selectstars/src/components/CreateEventForm/createEventForm.css
+++ b/selectstars/src/components/CreateEventForm/createEventForm.css
@@ -5,8 +5,26 @@
     font-family: Arial, sans-serif;
 }
 
-body {
-    background-color: #8246AE;
+.event-page .background-image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-image: url("https://s35764.pcdn.co/wp-content/uploads/2022/06/Women-in-Coding_1200x62801.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+.event-page .background-image::after {
+    position: absolute;
+    content: " ";
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-color: #8246AF;
+    background-size: cover;
+    background-position: center;
+    opacity: calc(25%);
 }
 
 .event-page h1 {
