--- a/selectstars/src/components/Nav/nav.css
+++ b/selectstars/src/components/Nav/nav.css
@@ -16,7 +16,6 @@
 .main-nav-container .nav-item {
     font-size: 16px;
     color: #8246AE;
-    /* font color for tabs */
     text-decoration: none;
     margin-left: 10px;
 }
@@ -28,4 +27,14 @@
 body {
     margin: 0;
     padding: 0;
+}
+
+.nav-tabs {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: #fff;
+    padding: 10px;
+    width: 100%;
+    height: 90px;
 }
