--- a/selectstars/src/components/MentorCard/mentorCard.css
+++ b/selectstars/src/components/MentorCard/mentorCard.css
@@ -1,5 +1,5 @@
 .mentorProfile_card{
-    max-width: 400px;
+    max-width: 430px;
     background-color: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
@@ -12,7 +12,8 @@
 }
 
 .mentorProfile_card {
-    margin: 10px;
+    margin: 20px;
+    padding: 5px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
