--- a/selectstars/src/components/CreateMentorForm/createMentorForm.css
+++ b/selectstars/src/components/CreateMentorForm/createMentorForm.css
@@ -80,7 +80,9 @@ button[type="submit"] {
 
 button[type="submit"]:hover {
     background-color: #f3279a;
+    transform: scale(1.1);
 }
+
 
 #dropdown {
     width: 350px;
