--- a/selectstars/src/components/CreateMentorForm/createMentorForm.css
+++ b/selectstars/src/components/CreateMentorForm/createMentorForm.css
@@ -29,7 +29,7 @@
 
 
 .mentor-page h1 {
-    color: #8246ae;
+    color: orange;
 }
 
 .mentor-form {
@@ -67,7 +67,7 @@ input {
 }
 
 button[type="submit"] {
-    display: block;
+    
     width: 100%;
     border: none;
     border-radius: 5px;
@@ -76,11 +76,15 @@ button[type="submit"] {
     color: #fff;
     background-color: #8246ae;
     cursor: pointer;
+    display: block;
+    margin: 0 auto;
+
 }
 
 button[type="submit"]:hover {
     background-color: #f3279a;
     transform: scale(1.1);
+    
 }
 
 
