--- a/selectstars/src/components/ChangePassword/changePasswordForm.css
+++ b/selectstars/src/components/ChangePassword/changePasswordForm.css
@@ -4,7 +4,7 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
 
-.cover h1, .login_label{
+.cover h1 {
     color: white;
 }
 
@@ -14,14 +14,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.field_container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
 }
 
 .cover {
@@ -38,8 +30,7 @@
     margin: 0 auto;
 }
 
-
-input {
+.cover input {
     border: none;
     background-color: white;
     height: 4em;
@@ -53,7 +44,7 @@ input:focus {
     outline-color: #F9A426;
 }
 
-#login-button {
+.update-button{
     width: 40%;
     height: 3em;
     background-color: #F9A426;
@@ -64,10 +55,9 @@ input:focus {
     transition: 0.5s;
     border-radius: 0.25em;
     cursor: pointer;
-    margin: 2em;
 }
 
-#login-button:hover {
+.update-button:hover {
     transform: scale(1.1);
 }
 
@@ -93,19 +83,3 @@ input:focus {
     transform: scale(0);
 }
 
-.login-popup {
-    position: absolute;
-    height: 30em;
-    width: 30em;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-radius: 0.25em;
-    background-color: orange;
-    color: white;
-    bottom: 0;
-    transform: scale(1);
-    transform: 1.5s;
-
-}
