--- a/selectstars/src/components/ChangePassword/changePasswordForm.css
+++ b/selectstars/src/components/ChangePassword/changePasswordForm.css
@@ -4,7 +4,7 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
 
-.cover h1 {
+.cover h1, .login_label{
     color: white;
 }
 
@@ -14,6 +14,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.field_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
 }
 
 .cover {
@@ -30,11 +38,12 @@
     margin: 0 auto;
 }
 
-.cover input {
+
+input {
     border: none;
     background-color: white;
     height: 4em;
-    width: 80%;
+    width: 100%;
     border-radius: 0.25em;
     text-align: center;
     padding: 2em;
@@ -44,7 +53,7 @@ input:focus {
     outline-color: #F9A426;
 }
 
-.update-button{
+#update-button {
     width: 40%;
     height: 3em;
     background-color: #F9A426;
@@ -55,9 +64,10 @@ input:focus {
     transition: 0.5s;
     border-radius: 0.25em;
     cursor: pointer;
+    margin: 2em;
 }
 
-.update-button:hover {
+#update-button:hover {
     transform: scale(1.1);
 }
 
@@ -83,3 +93,19 @@ input:focus {
     transform: scale(0);
 }
 
+.login-popup {
+    position: absolute;
+    height: 30em;
+    width: 30em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0.25em;
+    background-color: orange;
+    color: white;
+    bottom: 0;
+    transform: scale(1);
+    transform: 1.5s;
+
+}
