--- a/selectstars/src/components/CreateEventForm/createEventForm.css
+++ b/selectstars/src/components/CreateEventForm/createEventForm.css
@@ -28,54 +28,58 @@
 }
 
 .event-page h1 {
-    color: whitesmoke;
+    color: #F5F5F5;
     text-align: center;
+    padding-top: 2%;
+    padding-bottom: 1;
 }
 
-form {
+.event-page form {
     margin: 20px auto;
-    max-width: 700px;
+    max-width: 70%;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 15px rgb(0 0 0 / 20%);
-    background-color: white;
+    background-color: #F5F5F5;
     display: flex;
     flex-direction: column;
 }
 
-h1 {
-    color: white;
-    text-align: center;
-    margin-bottom: 20px;
-}
 
 .eventField {
-    margin: 10px;
-    width: 100%;
-    text-align: center;
+    margin: 1%;
+    width: 90%;
+    text-align: right;
+    display: flex;
+    align-items: flex-end;
+
+    
 }
 
-label {
+.eventField label {
     display: block;
+    margin-right: 10%;
     margin-bottom: 5px;
     font-weight: bold;
     color: #8246ae;
+    text-align: left;
 }
 
-input {
+.eventField input {
+    display: inline-block;
     width: 100%;
     border: none;
     border-radius: 5px;
-    padding: 10px;
+    padding: 1;
     font-size: 16px;
     color: #333;
-    background-color: #f3f3f3;
+    background-color: white;
 }
 
-button[type="submit"] {
+.eventField button[type="submit"] {
     display: block;
     margin: 0 auto;
-    width: 100%;
+    width: 70%;
     border: none;
     border-radius: 5px;
     padding: 10px;
@@ -85,7 +89,7 @@ button[type="submit"] {
     cursor: pointer;
 }
 
-button[type="submit"]:hover {
+.eventField button[type="submit"]:hover {
     background-color: #f3279a;
 }
 
