--- a/selectstars/src/components/CreateEventForm/createEventForm.css
+++ b/selectstars/src/components/CreateEventForm/createEventForm.css
@@ -37,7 +37,7 @@
 .event-page form {
     margin: 20px auto;
     max-width: 70%;
-    padding: 20px;
+    padding: 3%;
     border-radius: 10px;
     box-shadow: 0 2px 15px rgb(0 0 0 / 20%);
     background-color: #F5F5F5;
@@ -57,12 +57,15 @@
 }
 
 .eventField label {
-    display: block;
+    display: inline-block;
+    float: left;
+    clear: left;
+    width: 250px;
     margin-right: 10%;
     margin-bottom: 5px;
     font-weight: bold;
     color: #8246ae;
-    text-align: left;
+    text-align: right;
 }
 
 .eventField input {
@@ -79,7 +82,7 @@
 .eventField button[type="submit"] {
     display: block;
     margin: 0 auto;
-    width: 70%;
+    width: 40%;
     border: none;
     border-radius: 5px;
     padding: 10px;
