--- a/selectstars/src/App.css
+++ b/selectstars/src/App.css
@@ -1,16 +1,11 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  /* padding: 2rem; */
-/* text-align: center;
-} */
 
-html, body, #root {
+
+/* html, body, #root {
   width: 100%;
   height: 100%;
 }
 
-*/ .logo {
+.logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -47,4 +42,4 @@ html, body, #root {
 
 .read-the-docs {
   color: #888;
-};
+}; */
