--- a/selectstars/src/components/CreateUserForm/createUserForm.css
+++ b/selectstars/src/components/CreateUserForm/createUserForm.css
@@ -5,53 +5,81 @@
     font-family: Arial, sans-serif;
 }
 
-.register-page h1 {
-    color: #8246AE;
+
+.register-page .background-image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-image: url("https://s35764.pcdn.co/wp-content/uploads/2022/06/Women-in-Coding_1200x62801.jpg");
+    background-size: cover;
+    background-position: center;
 }
 
-.register-form {
-    max-width: 800px;
-    padding: 20px;
+.register-page .background-image::after {
+    position: absolute;
+    content: " ";
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-color: #8246AF;
+    background-size: cover;
+    background-position: center;
+    opacity: calc(25%);
+}
+.register-page h1 {
+    color: #F5F5F5;
+    text-align: center;
+    padding-top: 2%;
+    padding-bottom: 1;
+}
+
+.register-page .register-form {
+    margin: 20px auto;
+    max-width: 70%;
+    padding: 3%;
     border-radius: 10px;
     box-shadow: 0 2px 15px rgb(0 0 0 / 20%);
-    background-color: white;
+    background-color: #F5F5F5;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: column;
 }
 
-h1 {
-    color: white;
-    text-align: center;
-    margin-bottom: 20px;
-}
 
 .signUpField {
-    margin: 10px;
-    width: 46%;
-    text-align: center;
+    margin: 1%;
+    width: 90%;
+    text-align: right;
+    display: flex;
+    align-items: flex-end;
 }
 
-label {
-    display: block;
+.signUpField label {
+    display: inline-block;
+    clear: left;
+    width: 250px;
+    margin-right: 10%;
     margin-bottom: 5px;
     font-weight: bold;
     color: #8246ae;
+    text-align: right;
 }
 
-input {
+.signUpField input {
+    display: inline-block;
     width: 100%;
     border: none;
     border-radius: 5px;
-    padding: 10px;
+    padding: 1;
     font-size: 16px;
     color: #333;
-    background-color: #f3f3f3;
+    background-color: white;
 }
 
-button[type="submit"] {
+.signUpField button[type="submit"] {
     display: block;
-    width: 100%;
+    margin: 0 auto;
+    width: 40%;
     border: none;
     border-radius: 5px;
     padding: 10px;
