--- a/selectstars/src/components/HomePage/HomePage.css
+++ b/selectstars/src/components/HomePage/HomePage.css
@@ -1,7 +1,7 @@
-.home-page {
+/* .home-page {
     color: #8246ae;
     height: 100%;
-}
+} */
 
 .home-page .background-image {
     position: absolute;
