--- a/selectstars/src/App.css
+++ b/selectstars/src/App.css
@@ -1,6 +1,6 @@
 
 
-/* html, body, #root {
+* html, body, #root {
   width: 100%;
   height: 100%;
 }
@@ -42,4 +42,4 @@
 
 .read-the-docs {
   color: #888;
-}; */
+}; 
