--- a/selectstars/src/components/LoginPage/loginform.css
+++ b/selectstars/src/components/LoginPage/loginform.css
@@ -4,7 +4,7 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
 
-.cover .background-image-login {
+/* .cover .background-image-login {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -24,30 +24,30 @@
     background-size: cover;
     background-position: center;
     opacity: calc(25%);
-}
+} */
 
 
 .cover h1, .login_label{
     color: white;
 }
 
-.page {
+/* .page {
     height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
 
-.field_container{
+/* .field_container{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 
-}
+} */
 
-.cover {
+/* .cover {
     background-color: #8246AE;
     width: 30em;
     height: 35em;
@@ -59,7 +59,8 @@
     align-items: center;
     justify-content: space-around;
     margin: 0 auto;
-}
+} */
+
 .field_container label{
     margin-bottom: 5%;
 
