--- a/selectstars/src/components/Nav/nav.css
+++ b/selectstars/src/components/Nav/nav.css
@@ -3,8 +3,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #f7f7f7;
-    padding: 20px;
+    background-color: #E8E2E2;
+    padding: 5%;
     width: 100%;
     height: 90px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
@@ -14,6 +14,7 @@
 .main-nav-container img {
     width: 153px;
     height: 30px;
+    
 }
 
 .main-nav-container .nav-item {
@@ -53,11 +54,24 @@ body {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    background-color: #fff;
+    background-color: #E8E2E2;
     padding: 30px;
     width: 100%;
     height: 90px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+}
+
+.nav-logout {
+  font-size: 18px;
+  border: none;
+  color: #F16767;
+  text-decoration: none;
+  margin-left: 20px;
+  transition: all 0.3s ease-in-out;
+  padding-bottom: 10px;
+  border-bottom: 2px solid transparent;
+  font-weight: bold;
+  background-color: transparent;
 }
 
 @media screen and (max-width: 768px) {
