--- a/selectstars/src/components/LoginPage/loginform.css
+++ b/selectstars/src/components/LoginPage/loginform.css
@@ -4,7 +4,7 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
 
-/* .cover .background-image-login {
+.login-page-background {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -14,7 +14,7 @@
     background-position: center;
 }
 
-.cover .background-image-login::after {
+.login-page::after {
     position: absolute;
     content: " ";
     width: 100%;
@@ -24,7 +24,7 @@
     background-size: cover;
     background-position: center;
     opacity: calc(25%);
-} */
+}
 
 
 .login-cover h1, .login_label{
