--- a/selectstars/src/components/CreateEventForm/createEventForm.css
+++ b/selectstars/src/components/CreateEventForm/createEventForm.css
@@ -1,11 +1,13 @@
 * {
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
     font-family: Arial, sans-serif;
 }
 
-.event-page .background-image {
+.event-page {
+    background-color: #8246ae;
+}
+
+/* .event-page .background-image {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -13,9 +15,9 @@
     background-image: url("https://s35764.pcdn.co/wp-content/uploads/2022/06/Women-in-Coding_1200x62801.jpg");
     background-size: cover;
     background-position: center;
-}
+} */
 
-.event-page .background-image::after {
+/* .event-page .background-image::after {
     position: absolute;
     content: " ";
     width: 100%;
@@ -25,7 +27,7 @@
     background-size: cover;
     background-position: center;
     opacity: calc(25%);
-}
+} */
 
 .event-page h1 {
     color: #F5F5F5;
