--- a/selectstars/src/components/Nav/nav.css
+++ b/selectstars/src/components/Nav/nav.css
@@ -1,71 +1,79 @@
-
 .main-nav-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #E8E2E2;
-    padding: 5%;
-    width: 100%;
-    height: 90px;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
-    
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #E8E2E2;
+  padding: 5%;
+  width: 100%;
+  height: 90px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+
 }
 
 .main-nav-container img {
-    width: 153px;
-    height: 30px;
-    padding-right: 1%;
-    
+  width: 153px;
+  height: 30px;
+  padding-right: 1%;
+
 }
 
 .main-nav-container .nav-item {
-    font-size: 18px;
-    color: #8246AE;
-    text-decoration: none;
-    margin-left: 20px;
-    transition: all 0.3s ease-in-out;
-    padding-bottom: 10px;
-    border-bottom: 2px solid transparent;
+  font-size: 18px;
+  color: #8246AE;
+  text-decoration: none;
+  margin-left: 20px;
+  transition: all 0.3s ease-in-out;
+  padding-bottom: 10px;
+  border-bottom: 2px solid transparent;
 }
 
 .main-nav-container .nav-login {
-    font-size: 18px;
-    color: #F16767;
-    text-decoration: none;
-    margin-left: 20px;
-    transition: all 0.3s ease-in-out;
-    padding-bottom: 10px;
-    border-bottom: 2px solid transparent;
-    font-weight: bold;
+  font-size: 18px;
+  color: #F9A426;
+  text-decoration: none;
+  margin-left: 20px;
+  transition: all 0.3s ease-in-out;
+  padding-bottom: 10px;
+  border-bottom: 2px solid transparent;
+  font-weight: bold;
 }
+
 .main-nav-container .nav-item:hover {
-    color: #F16767;
-    border-bottom: 2px solid #F16767;
+  color: #F16767;
+  border-bottom: 2px solid #F16767;
 }
 
 .main-nav-container .nav-login:hover {
-    color: #F16767;
-    border-bottom: 2px solid #F16767;
+  color: #F16767;
+  border-bottom: 2px solid #F16767;
 }
+
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
+
+.logo {
+  /* display: flex; */
+  position: absolute;
+  left: 0;
+}
+
 .nav-tabs {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    background-color: #E8E2E2;
-    padding: 30px;
-    width: 100%;
-    height: 90px;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  background-color: #E8E2E2;
+  padding: 30px;
+  width: 100%;
+  height: 90px;
+  /* box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1); */
 }
 
 .nav-logout {
   font-size: 18px;
   border: none;
-  color: #F16767;
+  color: #F9A426;
   text-decoration: none;
   margin-left: 20px;
   transition: all 0.3s ease-in-out;
@@ -76,23 +84,23 @@ body {
 }
 
 @media screen and (max-width: 768px) {
-    .main-nav-container {
-      flex-wrap: wrap;
-      justify-content: center;
-      padding: 10px;
-      height: auto;
-    }
-  
-    .main-nav-container img {
-      margin-bottom: 10px;
-    }
-  
-    .main-nav-container .nav-item {
-      margin: 0 10px;
-    }
-  
-    .nav-tabs {
-      padding: 10px;
-      height: auto;
-    }
+  .main-nav-container {
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 10px;
+    height: auto;
   }
+
+  .main-nav-container img {
+    margin-bottom: 10px;
+  }
+
+  .main-nav-container .nav-item {
+    margin: 0 10px;
+  }
+
+  .nav-tabs {
+    padding: 10px;
+    height: auto;
+  }
+}
