--- a/selectstars/src/components/AllMentorsList/allMentors.css
+++ b/selectstars/src/components/AllMentorsList/allMentors.css
@@ -1,29 +1,32 @@
-* {
-    box-sizing: border-box;
-    /* margin: 5px;
-    padding: 5px; */
-    font-family: Arial, sans-serif;
+
+.allMentors-page .background-image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-image: url("https://s35764.pcdn.co/wp-content/uploads/2022/06/Women-in-Coding_1200x62801.jpg");
+    background-size: cover;
+    background-position: center;
+}
+.allMentors-page .background-image::after {
+    position: absolute;
+    content: " ";
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-color: #8246AF;
+    background-size: cover;
+    background-position: center;
+    opacity: calc(25%);
 }
 
-*/ .body {
-    background-color: #fff;
-    color: #8246ae;
+.allMentorsPage-title h1 {
+    font-size: 42px;
+    color: #F5F5F5;
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
-
-
-.allMentorPage {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-}
-
-.allMentorPage img {
-    width: 250px;
-}
-
-
 /* Responsive styles */
 @media screen and (max-width: 480px) {
     form {
