fixed mentor card data to show, fetched some data for detail mentor page, created mentor add event page
-fixed mentor card data to show,
-fetched some data for detail mentor page,
-created mentor add event page

--- a/selectstars/src/components/AllMentorsList/allMentors.css
+++ b/selectstars/src/components/AllMentorsList/allMentors.css
@@ -27,6 +27,15 @@
     padding-top: 50px;
     padding-bottom: 50px;
 }
+
+.allMentorSection{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 0 5%;
+    
+  }
 /* Responsive styles */
 @media screen and (max-width: 480px) {
     form {
