--- a/selectstars/src/components/MentorCard/card.css
+++ b/selectstars/src/components/MentorCard/card.css
@@ -1,14 +1,20 @@
 .mentorProfile_card{
-    max-width: 430px;
+    width: 30%;
+    height: auto;
     background-color: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
-    padding: 20px;
+    padding: 2%;
+    margin: 1em;
     color: #8246ae;
+    cursor: pointer;
+    box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25), 0 8px 16px -8px hsla(0, 0%, 0%, 0.3), 0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
+    transition: all ease 200ms;
 }
 
+
 .mentorProfile_card img {
-    width: 250px;
+    width: 30%;
 }
 
 .mentorProfile_card {
