--- a/selectstars/src/components/AllMentorsList/allMentors.css
+++ b/selectstars/src/components/AllMentorsList/allMentors.css
@@ -7,6 +7,7 @@
     background-image: url("https://s35764.pcdn.co/wp-content/uploads/2022/06/Women-in-Coding_1200x62801.jpg");
     background-size: cover;
     background-position: center;
+
 }
 .allMentors-page .background-image::after {
     position: absolute;
@@ -18,6 +19,7 @@
     background-size: cover;
     background-position: center;
     opacity: calc(25%);
+
 }
 
 .allMentorsPage-title h1 {
@@ -28,17 +30,15 @@
     padding-bottom: 50px;
 }
 
-.allMentorSection{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+.allMentorSection {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+    justify-content: center;
     padding: 0 5%;
-    width: 40%;
+    /* background-color: #8246AF; */
     }
-    
-    .allMentorCard {
-    flex-basis: 10%;
-    }
+
 
 @media screen and (max-width: 480px) {
     form {
