--- a/selectstars/src/components/ChangePassword/changePasswordForm.css
+++ b/selectstars/src/components/ChangePassword/changePasswordForm.css
@@ -4,7 +4,8 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
 
-.cover h1, .login_label{
+.cover h1,
+.login_label {
     color: white;
 }
 
@@ -16,7 +17,7 @@
     align-items: center;
 }
 
-.field_container{
+.field_container {
     display: flex;
     justify-content: center;
     align-items: center;
