--- a/selectstars/src/components/CreateEventForm/createEventForm.css
+++ b/selectstars/src/components/CreateEventForm/createEventForm.css
@@ -5,6 +5,8 @@
 
 .event-page {
     background-color: #8246ae;
+    /* height: 100%; */
+    padding-bottom: 30px;
 }
 
 /* .event-page .background-image {
