--- a/selectstars/src/components/HomePage/HomePage.css
+++ b/selectstars/src/components/HomePage/HomePage.css
@@ -1,5 +1,5 @@
 
-.home-page .background-image {
+/* .home-page .background-image {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -19,6 +19,10 @@
     background-size: cover;
     background-position: center;
     opacity: calc(25%);
+} */
+
+.home-page {
+    background-color: #8246AF;
 }
 
 .title h1 {
@@ -29,19 +33,33 @@
     padding-bottom: 50px;
 }
 
-.event-cards-container {
+/* .event-cards-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
-}
+} */
 
-.event-card {
+
+.events-container .event-card {
+    padding: 0 5%;
     background: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
-    margin: 20px;
+    margin: 2%;
     padding: 20px;
-    width: 300px;
+    width: 28.99%;
+}
+
+.events-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    
+}
+
+
+.event-card img {
+    width: 100%;
 }
 
 .event-card h2 {
