--- a/selectstars/src/components/LoginPage/LoginForm.css
+++ b/selectstars/src/components/LoginPage/LoginForm.css
@@ -8,7 +8,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: -1;
+    /* z-index: -1; */
     background-image: url("https://s35764.pcdn.co/wp-content/uploads/2022/06/Women-in-Coding_1200x62801.jpg");
     background-size: cover;
     background-position: center;
@@ -27,7 +27,8 @@
 } */
 
 
-.login-cover h1, .login_label{
+.login-cover h1,
+.login_label {
     color: white;
 }
 
@@ -39,12 +40,12 @@
     align-items: center;
 } */
 
-.field_container{
+.field_container {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-  
+
 
 }
 
@@ -62,7 +63,7 @@
     margin: 0 auto;
 }
 
-.field_container label{
+.field_container label {
     margin-bottom: 5%;
 
 }
@@ -82,8 +83,8 @@
 }
 
 .password-reset {
-    color:#F9A426;
-    
+    color: #F9A426;
+
 }
 
 #login-button {
