--- a/selectstars/src/components/AllMentorsList/allMentors.css
+++ b/selectstars/src/components/AllMentorsList/allMentors.css
@@ -1,14 +1,20 @@
 
-.allMentors-page .background-image {
+/* .allMentors-page .background-image {
     position: absolute;
     width: 100%;
     height: 100%;
     z-index: -1;
     background-image: url("https://s35764.pcdn.co/wp-content/uploads/2022/06/Women-in-Coding_1200x62801.jpg");
     background-size: cover;
-    background-position: center;
+    background-position: center; */
+/* } */
+
+.allMentors-page {
+    background-color: #8246AF;
+    padding-bottom: 20%;
 }
-.allMentors-page .background-image::after {
+
+/* .allMentors-page .background-image::after {
     position: absolute;
     content: " ";
     width: 100%;
@@ -18,22 +24,29 @@
     background-size: cover;
     background-position: center;
     opacity: calc(25%);
-}
+} */
 
 .allMentorsPage-title h1 {
     font-size: 42px;
     color: #F5F5F5;
     text-align: center;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .allMentorSection{
-    display: flex;
-    flex-wrap: wrap;
+    /* display: flex;
+    /* flex-wrap: wrap; */
+    /* flex-flow: column wrap;
     justify-content: space-around;
     padding: 0 5%;
-    width: 40%;
+    width: 30%;
+    height: 200%; */
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+    justify-content: center;
+    padding: 0 5%;
     }
     
     .allMentorCard {
