--- a/selectstars/src/components/HomePage/HomePage.css
+++ b/selectstars/src/components/HomePage/HomePage.css
@@ -1,4 +1,3 @@
-
 /* .home-page .background-image {
     position: absolute;
     width: 100%;
@@ -23,6 +22,7 @@
 
 .home-page {
     background-color: #8246AF;
+    padding-bottom: 30px;
 }
 
 .title h1 {
@@ -54,7 +54,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    
+
 }
 
 
