--- a/selectstars/src/components/HomePage/HomePage.css
+++ b/selectstars/src/components/HomePage/HomePage.css
@@ -98,3 +98,13 @@
     display: block;
     margin: 0 auto;
 }
+
+@media screen and (max-width: 480px) {
+    body {
+        max-width: 100%;
+    }
+
+    .nav-tabs .logo {
+        display: none;
+    }
+}
