--- a/selectstars/src/components/Nav/nav.css
+++ b/selectstars/src/components/Nav/nav.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: #E8E2E2;
-  padding: 5%;
+  padding: 3%;
   width: 100%;
   height: 90px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
@@ -56,7 +56,7 @@ body {
 .logo {
   /* display: flex; */
   position: absolute;
-  left: 0;
+  left: 1%;
 }
 
 .nav-tabs {
