--- a/selectstars/src/components/CreateMentorForm/createMentorForm.css
+++ b/selectstars/src/components/CreateMentorForm/createMentorForm.css
@@ -5,28 +5,6 @@
     font-family: Arial, sans-serif;
 }
 
-/* .mentor-page .background-image {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-image: url("https://s35764.pcdn.co/wp-content/uploads/2022/06/Women-in-Coding_1200x62801.jpg");
-    background-size: cover;
-    background-position: center;
-}
-
-.mentor-page .background-image::after {
-    position: absolute;
-    content: " ";
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-color: #8246AF;
-    background-size: cover;
-    background-position: center;
-    opacity: calc(25%);
-} */
-
 .mentor-page {
     background-color: #8246ae;
     padding-bottom: 30px;
@@ -80,6 +58,29 @@
     background-color: white;
 }
 
+#mentor_tech_stack {
+    width: 70%;
+    margin: 0;
+    padding: 5%;
+}
+
+.mentor_details ul {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 5%;
+    padding: 0;
+}
+
+.travel-box {
+    text-align: left;
+    width: 33.33%;
+    padding: 5px;
+    box-sizing: border-box;
+    margin-left: -15px;
+  }
+  
+
+
 .mentor_details button[type="submit"] {
     display: block;
     margin: 0 auto;
@@ -99,7 +100,7 @@
 
 }
 
-/* Responsive styles */
+
 @media screen and (max-width: 480px) {
     form {
         max-width: 100%;
