--- a/selectstars/src/components/HomePage/HomePage.css
+++ b/selectstars/src/components/HomePage/HomePage.css
@@ -124,4 +124,13 @@
         font-size: 10px;
         margin-bottom: 3px;
     }
+
+    /* .events-container {
+        display: flex;
+        flex-wrap: row;  
+    } */
+
+    .events-container .event-card {
+        width: 50%
+    }
 }
