--- a/selectstars/src/components/CreateUserForm/createUserForm.css
+++ b/selectstars/src/components/CreateUserForm/createUserForm.css
@@ -85,7 +85,8 @@
 .signUpField button[type="submit"] {
     display: block;
     margin: 0 auto;
-    width: 40%;
+    width: 70%;
+    margin-left: 30%;
     border: none;
     border-radius: 5px;
     padding: 10px;
