button hover decreased + redirect for mentor form

--- a/selectstars/src/components/CreateEventForm/createEventForm.css
+++ b/selectstars/src/components/CreateEventForm/createEventForm.css
@@ -93,6 +93,7 @@ select:focus {
 
 .eventField button[type="submit"]:hover {
     background-color: #f3279a;
+    transform: scale(1.02);
 }
 
 .footer {
