--- a/selectstars/src/components/ChangePassword/changePasswordForm.css
+++ b/selectstars/src/components/ChangePassword/changePasswordForm.css
@@ -4,6 +4,16 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
 
+.change-password-background {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    /* z-index: -1; */
+    background-image: url("https://s35764.pcdn.co/wp-content/uploads/2022/06/Women-in-Coding_1200x62801.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
 .cover h1,
 .login_label {
     color: white;
@@ -37,6 +47,7 @@
     align-items: center;
     justify-content: space-around;
     margin: 0 auto;
+    margin-top: 5%;
 }
 
 
